"counts" and "ranges" facet support.